# Better-Calendar-Holidays

./: .pre-commit-config.yaml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml  requirements-dev.txt  requirements.txt
backend/src/: app.py  config.py  dependencies.py
backend/src/api/: envelope.py  schemas.py
backend/src/domain/: errors.py  interfaces.py  models.py
backend/src/infrastructure/: calendarific.py  nager.py  quota.py  quota_gated.py  redis_cache.py
backend/src/routes/: calendar.py  errors.py  meta.py
backend/src/services/: bootstrap.py  deduplicator.py  holiday_service.py  ics_generator.py  region_normalizer.py  registry.py
frontend/: .gitignore  .prettierrc.json  .stylelintrc.json  angular.json  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/: index.html  main.ts  styles.css
frontend/src/app/: app.component.html
frontend/src/app/components/: copy-instructions-modal.component.ts  country-region-selector.component.ts  error-page.component.ts  holiday-preview.component.ts  ics-url-output.component.ts  not-found.component.ts
frontend/src/app/home/: home.component.ts
frontend/src/app/models/: holiday.models.ts
frontend/src/app/services/: holiday-api.service.ts
frontend/src/app/utils/: holiday-grouping.ts
