[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "better-calendar-holidays"
version = "0.1.0"
description = "Self-hosted holiday ICS feed API"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "C4"]
extend-ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_any_generics = true
plugins = []
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["icalendar", "slowapi", "slowapi.*"]
ignore_missing_imports = true
